[project]
name = "volley-rag"
version = "0.1.0"
description = "An app utilizing rag models to answer specific questions about the official FIVB volleyball rules"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=0.34.2",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "langchain>=0.2.16",
    "langchain-chroma>=0.1.3",
    "langchain-community",
    "pymupdf>=1.24.10",
    "transformers>=4.44.2",
    "langchain-openai>=0.1.23",
]
